Added keyboard support

--- a/frames/animes.html
+++ b/frames/animes.html
@@ -118,7 +118,7 @@
                 <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSeries" onclick="main.changeFrame('series')">
 
                 </a>
-                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuAnimes on" onclick="main.changeFrame('animes')">
+                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuAnimes selected" onclick="main.changeFrame('animes')">
 
                 </a>
                 <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents" onclick="main.changeFrame('torrents')">
