--- a/frames/series.html
+++ b/frames/series.html
@@ -115,7 +115,7 @@
                 <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuMovies" onclick="main.changeFrame('movies')">
 
                 </a>
-                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSeries on" onclick="main.changeFrame('series')">
+                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuSeries selected" onclick="main.changeFrame('series')">
 
                 </a>
                 <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuAnimes" onclick="main.changeFrame('animes')">
