Update custom subtitle color

--- a/frames/series.html
+++ b/frames/series.html
@@ -121,7 +121,7 @@
                 <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuAnimes" onclick="main.changeFrame('animes')">
 
                 </a>
-                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents" onclick="main.changeFrame('torrents')">
+                <a href="#" class="col-sm-2 col-xs-2 col-md-2 header-element menuTorrents" onclick="main.changeFrame('settings')">
 
                 </a>
 
