--- a/frames/settings.html
+++ b/frames/settings.html
@@ -120,7 +120,7 @@
                     });
 
                     //Get subtitle
-                    /*var subtitle = settings.readConfig('subtitle');
+                    var subtitle = settings.readConfig('subtitle');
                     var subtititles = localization.subtitles;
                     for (var lang in subtititles) {
                         if( subtitle === lang ) {
@@ -138,7 +138,7 @@
                         $('#subtitlesSaved').fadeIn('fast', function(){
                             $('#subtitlesSaved').fadeOut(1500);
                         });
-                    });*/
+                    });
 
                     // Custom subtitle color
                     $('#subtitleColorSaved').append(saved+'&nbsp;<span class="glyphicon glyphicon-ok"></span>');
@@ -350,15 +350,58 @@
                             </div>
                             <label id="metaProviderSaved" style="display: none" class="control-label"></label>
                         </div>
-                        <!--<div class="form-group">
+                        <div class="form-group">
                        <div style="padding-top: 7px" class="col-sm-2 settingsSubtitle"></div>
                            <div class="col-sm-4">
                                <select id="subtitles" class="form-control">
                                    <option value="">None</option>
+                                   <option value="Afrikaans">Afrikaans</option>
+                                   <option value="Arabic">Arabic</option>
+                                   <option value="Bengali">Bengali</option>
+                                   <option value="Brazilian">Brazilian</option>
+                                   <option value="Brazilian-Portuguese">Brazilian-Portuguese</option>
+                                   <option value="Bulgarian">Bulgarian</option>
+                                   <option value="Bosnian">Bosnian</option>
+                                   <option value="Chinese">Chinese</option>
+                                   <option value="Croatian">Croatian</option>
+                                   <option value="Czech">Czech</option>
+                                   <option value="Danish">Danish</option>
+                                   <option value="Dutch">Dutch</option>
+                                   <option value="English">English</option>
+                                   <option value="Estonian">Estonian</option>
+                                   <option value="Farsi-Persian">Farsi-Persian</option>
+                                   <option value="Finnish">Finnish</option>
+                                   <option value="French">French</option>
+                                   <option value="German">German</option>
+                                   <option value="Greek">Greek</option>
+                                   <option value="Hebrew">Hebrew</option>
+                                   <option value="Hungarian">Hungarian</option>
+                                   <option value="Indonesian">Indonesian</option>
+                                   <option value="Italian">Italian</option>
+                                   <option value="Japanese">Japanese</option>
+                                   <option value="Korean">Korean</option>
+                                   <option value="Lithuanian">Lithuanian</option>
+                                   <option value="Macedonian">Macedonian</option>
+                                   <option value="Malay">Malay</option>
+                                   <option value="Norwegian">Norwegian</option>
+                                   <option value="Polish">Polish</option>
+                                   <option value="Portuguese">Portuguese</option>
+                                   <option value="Romanian">Romanian</option>
+                                   <option value="Russian">Russian</option>
+                                   <option value="Serbian">Serbian</option>
+                                   <option value="Slovak">Slovak</option>
+                                   <option value="Slovenian">Slovenian</option>
+                                   <option value="Spanish">Spanish</option>
+                                   <option value="Swedish">Swedish</option>
+                                   <option value="Thai">Thai</option>
+                                   <option value="Turkish">Turkish</option>
+                                   <option value="Urdu">Urdu</option>
+                                   <option value="Ukrainian">Ukrainian</option>
+                                   <option value="Vietnamese">Vietnamese</option>
                                </select>
                            </div>
                            <label id="subtitlesSaved" style="display: none" class="control-label"></label>
-                       </div>-->
+                       </div>
 
                         <div style="margin-top: 60px"><h3 class="playerSettings"></h3></div>
                         <div class="form-group">
